# tickrs

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  azure-pipelines.yml  rustfmt.toml
.github/workflows/: check-cross.yml  check.yml  homebrew.yml  lints.yml  release.yml  test.yml
api/: Cargo.toml
api/src/: client.rs  lib.rs  model.rs
api/src/tests/responses/: batch.json
ci/aarch64-unknown-linux-gnu/: Dockerfile
ci/armv7-unknown-linux-gnueabihf/: Dockerfile
src/: app.rs  cli.rs  common.rs  draw.rs  event.rs  main.rs  opts.rs  portfolio.rs  service.rs  task.rs  theme.rs  time_frame.rs  widget.rs
src/service/: default_timestamps.rs  options.rs  stock.rs
src/task/: company.rs  current_price.rs  default_timestamps.rs  options_data.rs  options_dates.rs  prices.rs
src/widget/: add_stock.rs  block.rs  chart_configuration.rs  help.rs  options.rs  stock.rs  stock_summary.rs
src/widget/chart/: mod.rs  prices_candlestick.rs  prices_kagi.rs  prices_line.rs  volume_bar.rs
