[package]
name = "api"
version = "0.1.0"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"


[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.6"
mockito = "0.23"
serde_json = "1.0"
serde = { version = "1.0", features=["derive"] }

futures = "0.3"

http = "0.1"
curl = { version = "0.4", default-features=false, features = ["static-curl", "static-ssl", "http2"] }
http-client = { git="https://github.com/http-rs/http-client", features = ["native_client"], rev="98359bfbe618de4faef18ddb78193c113b8a14fb" }