[package]
name = "tickrs-api"
version = "0.9.1"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2018"
license = "MIT"
description = "API for tickrs"
repository = "https://github.com/tarkah/tickrs"


[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
serde_urlencoded = "0.6"
serde_json = "1.0"
serde = { version = "1.0", features=["derive"] }

futures = "0.3"

http = "0.1"
curl = { version = "0.4", default-features=false, features = ["static-ssl"] }
isahc = "0.8"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
