[package]
name = "tickrs-api"
version = "0.14.9"
authors = ["tarkah <admin@tarkah.dev>"]
edition = "2021"
license = "MIT"
description = "API for tickrs"
repository = "https://github.com/tarkah/tickrs"

[dependencies]
anyhow = "1.0"
futures = "0.3"
http = "0.2"
isahc = { version = "1.7", features = ["static-ssl"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_urlencoded = "0.7"

[dev-dependencies]
async-std = { version = "1", features = ["attributes"] }
